# mindkernel

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RESEARCH.md  build.rs  start_kernel.bat  start_mindkernel.bat  start_nexus_backend.bat  start_nexus_frontend.bat  watchdog.ps1
proto/: mindkernel.proto
src/: emergent.rs  lambda_function.rs  llm_tool.rs  macro_drives.rs  main.rs  meta_cog.rs  micro_drives.rs  nexus_client.rs  public_apis.rs  resource_manager.rs  sandbox.rs  self_applier.rs  self_model.rs  self_modifier.rs  stochastic_clock.rs  syscall.rs
