[package]
name = "mindkernel"
version = "0.8.0"
edition = "2024"
description = "Self-modifying AI with homeostatic drives, emergent operator discovery, and sandboxed code evolution"
authors = ["mindkernel"]
license = "MIT"
repository = "https://github.com/Topik-Hub/mindkernel"
homepage = "https://github.com/Topik-Hub/mindkernel"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
